[package]
name = "wasmium-random"
version = "1.0.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
license = "CC0-1.0 OR Apache-2.0"
description = "Generate random numeric, alphabet, alphanumeric, BIP39 and EFF random bytes"
readme = "README.md"
repository = "https://github.com/wasmium/WasmiumRandom"
homepage = "https://wasmium.network/opensource"
keywords = ["Random", "CSPRNG", "PRNG", "random names", "random bytes"]
categories = ["algorithms", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanorand = { version = "0.6.1", features = ["chacha"] }
